# dbackup

./: .gitignore  AGENTS.md  AUTOMATION.md  Cargo.toml  DOCUMENTATION_SUMMARY.md  Dockerfile  INDEX.md  LICENSE  PROJECT.md  QUICKSTART.md  README.md  SCHEDULED_BACKUPS.md  SUMMARY.md  backup.example.yml  dbackup.service  example-centralized.yml
.github/workflows/: build.yml
docs/: DOCS_README.md  bun.lockb  package.json
docs/content/docs/: backup-modes.mdx  cli-reference.mdx  configuration.mdx  getting-started.mdx  index.mdx  installation.mdx  meta.json  restore.mdx  retention.mdx  scheduling.mdx  storage.mdx  systemd-service.mdx  troubleshooting.mdx
docs/lib/: layout.shared.tsx
src/: config.rs  fs_utils.rs  main.rs  mysql.rs  postgres.rs  retention.rs  scheduler.rs  storage.rs  updater.rs
