[package]
name = "dbackup"
version = "0.0.4"
edition = "2021"
authors = ["Database Backup Tools Contributors"]
description = "A robust database backup utility with PostgreSQL support"

[dependencies]
# Configuration
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"

# Async runtime
tokio = { version = "1.49.0", features = ["full"] }

# Date and time
chrono = "0.4.43"

# Cron scheduling
cron = "0.15.0"

# Error handling
anyhow = "1.0.101"
thiserror = "2.0.18"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# File operations
flate2 = "1.1.9"
tar = "0.4.44"

# CLI
clap = { version = "4.5.58", features = ["derive"] }

# HTTP requests for updates (using rustls for zero system dependencies)
reqwest = { version = "0.12.10", features = ["json", "rustls-tls"], default-features = false }
serde_json = "1.0.133"

# Async traits
async-trait = "0.1.80"

# UUID for temporary file names
uuid = { version = "1.10.0", features = ["v4"] }

# AWS S3 for cloud storage
aws-config = "1.5.0"
aws-sdk-s3 = "1.46.0"
aws-smithy-runtime = "1.7.0"
